--- a/web/src/index.css
+++ b/web/src/index.css
@@ -10,14 +10,25 @@
   box-sizing: border-box;
 }
 
-body {
-  font-family: 'Roboto', sans-serif;
+html {
   font-size: 16px;
 }
 
-.root {
-  width: 100vw;
-  height: 100vh;
+body {
+  font-family: 'ClashGrotesk', sans-serif;
+  font-size: 16px;
+  -webkit-font-smoothing: antialiased;
+  scrollbar-gutter: stable both-edges;
+}
+
+.font-secondary {
+  font-family: 'Savior', sans-serif;
+  letter-spacing: 0.075em;
+}
+
+p {
+  margin: 0 !important;
+  padding: 0 !important;
 }
 
 .ant-modal-footer .ant-btn-primary {
@@ -26,4 +37,15 @@ body {
 
 .flex-center {
   @apply flex items-center justify-center;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hidden-scroll-bar::-webkit-scrollbar {
+  display: none !important;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hidden-scroll-bar {
+  -ms-overflow-style: none !important; /* IE and Edge */
+  scrollbar-width: none !important; /* Firefox */
 }
